language/move-lang/tests/move_check/typing/constraints_not_satisfied_type_annotation.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_type_annotation.move:2:20 ───
   │
 2 │     struct CupC<T: copyable> {}
   │                    -------- 'copyable' constraint declared here
 3 │     struct C {}
 4 │     resource struct R {}
   │     -------- The type's constraint information was determined here
   ·
 7 │         ignore((abort 0: CupC<R>));
   │                          ^^^^^^^ Constraint not satisfied.
   │                               - The resource type '0x8675309::M::R' does not satisfy the constraint 'copyable'
   │

